gcc/testsuite/rust/rustc/ui/parser/keyword-const-as-identifier.rs
// This file was auto-generated using 'src/etc/generate-keyword-tests.py const'

fn main() {
    let const = "foo"; // { dg-error "" "" { target *-*-* } }
}

